tests/baselines/reference/declaredExternalModuleWithExportAssignment.errors.txt
==== tests/cases/compiler/declaredExternalModuleWithExportAssignment.ts (2 errors) ====
    declare module 'connect' {
        interface connectModule {
            (res, req, next): void;
        }
    
        interface connectExport {
            use: (mod: connectModule) => connectExport;
            listen: (port: number) => void;
        }
    
        var server: {
            ~~~~~~~~~
            ~~~~~~~~~
            (): connectExport;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
            test1: connectModule;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            test2(): connectModule;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        };
    ~~~~~
!!! declaredExternalModuleWithExportAssignment.ts(11,9): error TS2027: Exported variable 'server' has or is using private type 'connectModule'.
    ~~~~~
!!! declaredExternalModuleWithExportAssignment.ts(11,9): error TS2027: Exported variable 'server' has or is using private type 'connectExport'.
        export = server;
    }
    